@@ -1,0 +1,35 @@
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;; {$plugin_name} - for Ethna Plugin Package.
+;;;
+;;; command line to get package tgz files:
+;;; > ethna make-plugin-package Package_Dir
+;;;
+;;; $Id$
+;;; 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+[plugin]
+name    = Ethna_Plugin_{$plugin_name}
+extlib  = true
+app_only = false
+
+[package]
+channel = __uri 
+summary = "your plugin summary"
+description = "your plugin description"
+
+[release]
+version = 1.0.0
+state   = stable
+notes   = "your plugin release note."
+
+[maintainers]
+role1   = lead
+name1   = your name 
+user1   = your handle name
+email1  = yourname@example.com
+active1 = yes
+
+[license]
+name    = The BSD License
+uri     = http://www.opensource.org/licenses/bsd-license.php
