@@ -1,0 +1,15 @@
+<?php
+// vim: foldmethod=marker
+/**
+ *  {$plugin_name} Smarty block Plugin
+ *
+ *  @author     your name <yourname@example.com>
+ *  @license    http://www.opensource.org/licenses/bsd-license.php The BSD License
+ *  @package    Ethna_Plugin
+ *  @version    $Id$
+ */
+
+function smarty_block_{$plugin_name}($params, $content, &$smarty, &$repeat)
+{
+}
+?>
