@@ -46,6 +46,7 @@
 --- ethna uninstall-plugin (削除)
 --- ethna upgrade-plugin (削除)
 --- ethna list-plugin (削除)
+-- プラグインパッケージのスケルトンを生成するコマンドとして ethna create-plugin コマンドを追加
 -- Filterは一貫してプラグインを使うように変更したため、add-project時の app/filter ディレクトリを削除。
 - Smartyに関する変更
 -- Smarty を 2.6.26 に追随
